2012-01-16  Mark Rowe  <mrowe@apple.com>

        Merge r104378.

    2012-01-06  Mark Rowe  <mrowe@apple.com>

        REGRESSION (r83075): Save as PDF does not generate any links for webkit.org and others
        <http://webkit.org/b/75768> <rdar://problem/10659258>

        Use RenderObject::hasOutline when determining whether to always create line boxes so that
        we take in to consideration whether we'll be creating PDF link rects.

        Reviewed by Dan Bernstein.

        * rendering/RenderInline.cpp:
        (WebCore::RenderInline::styleDidChange):

2011-1-16  Lucas Forschler  <lforschler@apple.com>

    Merge 91324

    2011-07-19  Simon Fraser  <simon.fraser@apple.com>

            REGRESSION (r91136-r91146): 40 tests failing on Windows 7 Release (Tests)
            https://bugs.webkit.org/show_bug.cgi?id=64808

            Reviewed by Adam Roben.

            Initializing m_uncommittedChanges to a non-zero value
            caused the first call to noteLayerPropertyChanged() to
            not call m_client->notifySyncRequired(). This resulted in
            animations never getting committed on Windows, which broke
            a lot of tests.

            * platform/graphics/ca/GraphicsLayerCA.cpp:
            (WebCore::GraphicsLayerCA::GraphicsLayerCA):

2011-1-13  Lucas Forschler  <lforschler@apple.com>

    Merge 104352

    2012-01-05  Simon Fraser  <simon.fraser@apple.com>

            Avoid falling into tiled layers more often when the device scale factor is > 1
            <rdar://problem/10588725>

            Reviewed by John Sullivan.

            Stop taking the device scale factor into account when deciding to make
            tiled layers.

            Test: compositing/tiled-layers-hidpi.html

            * platform/graphics/ca/GraphicsLayerCA.cpp:
            (WebCore::GraphicsLayerCA::requiresTiledLayer):

2011-1-13  Lucas Forschler  <lforschler@apple.com>

    Merge 104269

    2012-01-05  Dan Bernstein  <mitz@apple.com>
